Update mobile sidebar styles

--- a/frontend/src/components/layouts/AppLayout/AppLayout.module.scss
+++ b/frontend/src/components/layouts/AppLayout/AppLayout.module.scss
@@ -28,6 +28,7 @@
   .main {
     grid-area: main;
     padding: var(--hi-spacing-lg);
+    padding-bottom: calc(var(--hi-spacing-lg) + 40px);
     overflow: auto;
     background-color: #f9fafc;
 
