Style: Mobile breadcrumb updates

--- a/frontend/src/components/layouts/AppLayout/AppLayout.module.scss
+++ b/frontend/src/components/layouts/AppLayout/AppLayout.module.scss
@@ -32,6 +32,10 @@
     background-color: #f9fafc;
 
     @include mixins.scrollbar;
+
+    @media (max-width: 767px) {
+      padding: 16px 16px 56px;
+    }
   }
 
   .sidebarOpen {
