--- a/frontend/src/components/layouts/AppLayout/AppLayout.module.scss
+++ b/frontend/src/components/layouts/AppLayout/AppLayout.module.scss
@@ -33,6 +33,10 @@
     background-color: #f9fafc;
 
     @include mixins.scrollbar;
+
+    @media (max-width: 767px) {
+      padding: 16px 16px 56px;
+    }
   }
 
   .sidebarOpen {
