Feature: Add marketing opt-in

--- a/frontend/src/components/routes/profile/ManageProfile/ManageProfile.module.scss
+++ b/frontend/src/components/routes/profile/ManageProfile/ManageProfile.module.scss
@@ -12,6 +12,12 @@
   .tabWrapper {
     padding: var(--hi-spacing-xl);
   }
+
+  .fieldsetLegend {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+  }
 }
 
 .emailNotVerified {
